# toolbox

./: .editorconfig  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js
public/: index.html
src/: App.svelte  main.ts  text-encodings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: BaseNEncoder.svelte  CodeMirror.svelte  ConfigBox.svelte  ExpandableMenu.svelte  HSplitPane.svelte  MultiSelectDropdown.svelte  SelectDropdown.svelte  Tool.svelte
src/components/tools/: BaseNEncoder.svelte  JSONFormatter.svelte  JSONYamlConverter.svelte  JWTDecoder.svelte  LoremGenerator.svelte  MarkdownEditor.svelte.bak  RegexTester.svelte  TextAnalyzer.svelte  TextDiff.svelte  TextEncoder.svelte  TimestampConverter.svelte  UUIDGenerator.svelte
src/lib/: debounce.ts  hex-to-css-filter.ts  lorem.ts  text-encodings.ts  time-conversion.ts  undoable.ts
src/state/: codemirror.ts  store.ts  types.ts
src/style/: style.scss  variables.scss
src/util/: click-outside.ts  debounce.ts  json.ts  regex-match-mode.ts
